--- a/public/login-page.html
+++ b/public/login-page.html
@@ -24,8 +24,7 @@
     <main class="login-main">
         <h2>เข้าสู่ระบบ</h2>
 
-        <form action="" method="POST" class="login-form">
-
+        <form method="POST" class="login-form">
             <div class="form-group">
                 <label for="email">อีเมล</label>
                 <input type="email" name="email" id="email" required placeholder="student@kmutt.ac.th">
