Add ID to logout button for consistency in home page

--- a/public/home-page.html
+++ b/public/home-page.html
@@ -62,7 +62,7 @@
                         class="material-symbols-outlined">history</span><span>ประวัติการเข้าร่วม</span></a></li>
             <!-- Member --><li><a href="./settings-page.html" class="member-only"><span
                         class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
-            <!-- Member --><li><a href="./login-page.html" class="member-only"><span
+            <!-- Member --><li><a href="./login-page.html" class="member-only" id="logout-button"><span
                         class="material-symbols-outlined">logout</span><span>ออกจากระบบ</span></a>
             </li>
         </ul>
