Implement auth guard to redirect unauthenticated users to home page

--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
-    <script src="./JavaScript/add-room-page.js"></script>
+    <script src="./JavaScript/auth-guard.js"></script>
+    <script src="./JavaScript/add-room-page.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
