--- a/public/created-room.html
+++ b/public/created-room.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./css/page-home.css">
     <link rel="stylesheet" href="./css/page-auth.css">
     <link rel="stylesheet" href="./css/header.css">
-    <script src="./JavaScript/edit-room-page.js"></script>
+    <script src="./JavaScript/auth-guard.js"></script>
+    <script src="./JavaScript/edit-room-page.js" defer></script>
     <script src="./JavaScript/filter.js" defer></script>
     <script src="./JavaScript/sidebar.js" defer></script>
-    <script src="./JavaScript/home-page.js">defer</script>
+    <script src="./JavaScript/home-page.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
