--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./css/page-home.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
-    <script src="./JavaScript/sidebar.js"></script>
+    <script src="./JavaScript/auth-guard.js"></script>
+    <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/home-page.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
