--- a/public/privacy-policy-page.html
+++ b/public/privacy-policy-page.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/page-policy.css">
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="stylesheet" href="./css/header.css">
-
+    <script src="./JavaScript/auth-guard.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
