--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="stylesheet" href="./css/header.css">
+    <script src="./JavaScript/auth-guard.js"></script>
     <script src="/JavaScript/room-detail-page.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
