--- a/public/settings-page.html
+++ b/public/settings-page.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/page-settings.css">
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="stylesheet" href="./css/header.css">
+    <script src="./JavaScript/auth-guard.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="./JavaScript/edit-room-page.js"></script>
