Refactor CSS and HTML for improved layout and accessibility

--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -112,7 +112,7 @@
                     <div class="profile-title">
                         <h1 class="name" id="user-name">มดตะนอย กัดเจบเจ็บ</h1>
 
-                        <div class="creditperson">
+                        <div class="creditperson" title="คะแนนเครดิตความน่าเชื่อถือ">
                             <img src="./Resource/img/credit.png" alt="credit-image" class="new-credit-icon">
                             <span class="new-credit-score" id="user-credit">100</span>
                         </div>
