Add logout-button class for consistency in logout links

--- a/public/settings-page.html
+++ b/public/settings-page.html
@@ -54,7 +54,7 @@
                         class="material-symbols-outlined">history</span><span>ประวัติการเข้าร่วม</span></a></li>
             <li class="active-page"><a href="./settings-page.html"><span
                         class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
-            <li><a href="./login-page.html"><span
+            <li><a href="./login-page.html" class="logout-button"><span
                         class="material-symbols-outlined">logout</span><span>ออกจากระบบ</span></a>
             </li>
         </ul>
@@ -95,7 +95,7 @@
                             <ul class="dropdown-links">
                                 <li><a href="./my-account-page.html">แก้ไขโปรไฟล์</a></li>
                                 <li><a href="./settings-page.html">การตั้งค่า</a></li>
-                                <li><a href="./login-page.html" id="logout-button" class="logout-item">ออกจากระบบ</a></li>
+                                <li><a href="./login-page.html" class="logout-item logout-button">ออกจากระบบ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                     <span class="material-symbols-outlined">chevron_right</span>
                 </a>
 
-                <a href="./login-page.html" class="settings-item settings-item-logout" id="logout-button">
+                <a href="./login-page.html" class="settings-item settings-item-logout logout-button">
                     <span class="material-symbols-outlined" id="logout-icon">logout</span>
                     ออกจากระบบ
                 </a>
