Refactor logout button class for consistency across pages

--- a/public/history-page.html
+++ b/public/history-page.html
@@ -57,7 +57,7 @@
             <li><a href="./settings-page.html"><span
                         class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
             <li><a href="./login-page.html"><span
-                        class="material-symbols-outlined">logout</span><span>ออกจากระบบ</span></a>
+                        class="material-symbols-outlined logout-button">logout</span><span>ออกจากระบบ</span></a>
             </li>
         </ul>
     </nav>
@@ -97,7 +97,7 @@
                             <ul class="dropdown-links">
                                 <li><a href="./my-account-page.html">แก้ไขโปรไฟล์</a></li>
                                 <li><a href="./settings-page.html">การตั้งค่า</a></li>
-                                <li><a href="./login-page.html" id="logout-button" class="logout-item">ออกจากระบบ</a></li>
+                                <li><a href="./login-page.html" class="logout-item logout-button">ออกจากระบบ</a></li>
                             </ul>
                         </div>
                     </div>
