--- a/public/home-page.html
+++ b/public/home-page.html
@@ -62,8 +62,8 @@
                         class="material-symbols-outlined">history</span><span>ประวัติการเข้าร่วม</span></a></li>
             <!-- Member --><li><a href="./settings-page.html" class="member-only"><span
                         class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
-            <!-- Member --><li><a href="./login-page.html" class="member-only" id="logout-button"><span
-                        class="material-symbols-outlined">logout</span><span>ออกจากระบบ</span></a>
+            <!-- Member --><li><a href="./login-page.html" class="member-only" ><span
+                        class="material-symbols-outlined logout-button">logout</span><span>ออกจากระบบ</span></a>
             </li>
         </ul>
         <!-- Gust --><div class="sidebar-auth-action guest-only">
@@ -110,7 +110,7 @@
                             <ul class="dropdown-links">
                                 <li><a href="./my-account-page.html">แก้ไขโปรไฟล์</a></li>
                                 <li><a href="./settings-page.html">การตั้งค่า</a></li>
-                                <li><a href="" class="logout-item" id="logout-button">ออกจากระบบ</a></li>
+                                <li><a href="" class="logout-item logout-button">ออกจากระบบ</a></li>
                             </ul>
                         </div>
                     </div>
