--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -52,7 +52,7 @@
             <li><a href="./settings-page.html"><span
                         class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
             <li><a href="./login-page.html"><span
-                        class="material-symbols-outlined">logout</span><span>ออกจากระบบ</span></a>
+                        class="material-symbols-outlined logout-button">logout</span><span>ออกจากระบบ</span></a>
             </li>
         </ul>
     </nav>
