Implement global user data loader and update UI elements on login/logout

--- a/public/home-page.html
+++ b/public/home-page.html
@@ -16,6 +16,7 @@
     <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/home-page.js" defer></script>
     <script src="./JavaScript/slide-home-page.js" defer></script>
+    <script src="./JavaScript/global-loader.js" defer></script>
     <!-- #endregion -->
     <!-- #region Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
