--- a/public/register-page.html
+++ b/public/register-page.html
@@ -14,7 +14,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
         rel="stylesheet">
-    <script src="./JavaScript/redirect-if-auth.js"></script>
 </head>
 
 <body>
@@ -31,9 +30,9 @@
             </div>
 
             <div class="name-group">
-                <div class="usernamebox">
-                    <label for="username">ชื่อ <span>*</span></label>
-                    <input type="text" name="username" id="username" required>
+                <div class="fullnamebox">
+                    <label for="fullname">ชื่อ <span>*</span></label>
+                    <input type="text" name="fullname" id="fullname" required>
                 </div>
                 <div class="lastnamebox">
                     <label for="lastname">นามสกุล <span>*</span></label>
