Enhance user data loading by integrating faculty and year information, and update UI elements across multiple pages for consistency

--- a/public/created-room.html
+++ b/public/created-room.html
@@ -15,6 +15,7 @@
     <script src="./JavaScript/filter.js" defer></script>
     <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/home-page.js" defer></script>
+    <script src="./JavaScript/global-loader.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
