--- a/public/home-page.html
+++ b/public/home-page.html
@@ -105,7 +105,7 @@
                                     <img src="./Resource/img/profile.jpg" alt="profile-large">
                                 </div>
                                 <p class="user-name" id="user-name">Guest</p>
-                                <p class="user-email" id="user-email">guest@example.com</p>
+                                <p class="user-email" id="user-email">guest@kmutt.ac.th</p>
                             </div>
 
                             <ul class="dropdown-links">
