--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./css/header.css">
     <script src="./JavaScript/auth-guard.js"></script>
     <script src="./JavaScript/sidebar.js" defer></script>
-    <script src="./JavaScript/home-page.js" defer></script>
     <script src="./JavaScript/global-loader.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,14 +30,14 @@
             </div>
 
             <div class="sidebar-name-group">
-                <h3 id="sidebar-user-name">นิกก้า ด้ำดำ</h3>
+                <h3 id="sidebar-user-name">Guest</h3>
                 <div class="creditperson">
                     <span id="sidebar-user-credit">100</span>
                     <img src="./Resource/img/credit.png" alt="credit icon">
                 </div>
             </div>
 
-            <p id="sidebar-user-email">niagger911@gmail.com</p>
+            <p id="sidebar-user-email">Guest@kmutt.ac.th</p>
         </div>
 
         <ul class="sidebar-links">
@@ -85,8 +84,8 @@
                                 <div class="dropdown-img-large">
                                     <img src="./Resource/img/profile.jpg" alt="profile-large">
                                 </div>
-                                <p class="user-name">มดตะนอย กัดเจ็บ</p>
-                                <p class="user-email">niggadamdam911@gmail.com</p>
+                                <p class="user-name">Guest</p>
+                                <p class="user-email">Guest@kmutt.ac.th</p>
                             </div>
 
                             <ul class="dropdown-links">
@@ -112,14 +111,14 @@
                 </div>
                 <div class="profile-info">
                     <div class="profile-title">
-                        <h1 class="name" id="user-name">มดตะนอย กัดเจบเจ็บ</h1>
+                        <h1 class="name" id="user-name">Guest</h1>
 
                         <div class="creditperson" title="คะแนนเครดิตความน่าเชื่อถือ">
                             <img src="./Resource/img/credit.png" alt="credit-image" class="new-credit-icon">
                             <span class="new-credit-score" id="user-credit">100</span>
                         </div>
                     </div>
-                    <p class="email" id="user-email">Modtanoy.gadj@kmutt.ac.th</p>
+                    <p class="email" id="user-email">guest@kmutt.ac.th</p>
                     <p class="profile-education" id="user-education">คณะวิทยาศาสตร์ ระดับชั้นปีที่ 2</p>
                     <div class="profile-about">
                         <strong>เกี่ยวกับฉัน :</strong>
