Add global loader script to settings page for improved loading management

--- a/public/settings-page.html
+++ b/public/settings-page.html
@@ -17,6 +17,7 @@
     <script src="./JavaScript/filter.js" defer></script>
     <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/header.js" defer></script>
+    <script src="./JavaScript/global-loader.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
