Enhance user profile editing by integrating faculty selection and improving data loading for consistency

--- a/public/edit-account-page.html
+++ b/public/edit-account-page.html
@@ -63,24 +63,16 @@
 
             <div class="form-group">
                 <label for="select-faculty">คณะ</label>
-                <select name="select-faculty" id="select-faculty">
-                    <option value="0">-</option>
-                    <option value="1" selected>วิศวกรรมศาสตร์</option>
-                    <option value="2">วิทยาศาสตร์</option>
-                    <option value="3">ครุศาสตร์อุตสาหกรรมฯ</option>
-                    <option value="4">เทคโนโลยีสารสนเทศ (SIT)</option>
-                    <option value="5">สถาปัตยกรรมศาสตร์</option>
-                </select>
+                <select name="select-faculty" id="select-faculty"></select>
             </div>
 
             <div class="form-group">
                 <label for="select-years">ชั้นปี</label>
                 <select name="select-years" id="select-years">
-                    <option value="empty">-</option>
-                    <option value="1" selected>1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
+                    <option value="1" selected>ปี 1</option>
+                    <option value="2">ปี 2</option>
+                    <option value="3">ปี 3</option>
+                    <option value="4">ปี 4</option>
                 </select>
             </div>
 
