--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -7,7 +7,6 @@
     <title>MODJOY - บัญชีของฉัน</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/page-my-account.css">
-    <link rel="stylesheet" href="./css/page-home.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
     <script src="./JavaScript/auth-guard.js"></script>
@@ -21,7 +20,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-<body>
+<body class="image-background">
     <nav class="side-bar" id="sidebar">
         <div class="sidebar-header">
             <button class="material-symbols-outlined sidebar-close-btn" id="sidebar-close-btn"
