Refactor address input handling in add-room-page; update HTML structure and improve accessibility attributes

--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -55,15 +55,10 @@
             <div class="form-group">
                 <label for="address-input-display">ชื่อสถานที่</label>
                 <div class="custom-select-container">
-                    <input type="text" id="address-input-display" class="custom-select-input"
+                    <input type="text" class="custom-select-input" id="address-input-display"
                         placeholder="พิมพ์ค้นหา หรือเลือกจากรายการ..." role="combobox" aria-autocomplete="list"
-                        aria-expanded="false" aria-haspopup="listbox" aria-controls="places-listbox">>
-                    <div class="custom-options-list" id="places-listbox" role="listbox">
-                        <div class="custom-option" role="option" aria-selected="false" data-value="N7 ตึกวิทยาศาสตร์">N7 ตึกวิทยาศาสตร์</div>
-                        <div class="custom-option" role="option" aria-selected="false" data-value="N10 ห้องสมุด">N10 ห้องสมุด</div>
-                        <div class="custom-option" role="option" aria-selected="false" data-value="S2">S2</div>
-                        <div class="custom-option" role="option" aria-selected="false" data-value="S3">S3</div>
-                    </div>
+                        aria-expanded="false" aria-haspopup="listbox" aria-controls="places-listbox">
+                    <div class="custom-options-list" id="places-listbox" role="listbox"></div>
                     <input type="hidden" name="address-activity" id="address-input-hidden">
                 </div>
             </div>
