--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -96,6 +96,10 @@
                 <input type="hidden" name="tags_list" id="tags-list-hidden" value="">
                 <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 5 อัน)</p>
             </div>
+            <div class="form-group">
+                <label for="capacity">จำนวนผู้เข้าร่วม :</label>
+                <input class='capacity input' type="number" id="capacity" name="capacity" min="1" max="100" default='1' required>
+            </div>
 
             <div class="btn-box">
                 <button type="submit" class="btn">สร้าง</button>
