--- a/public/edit-account-page.html
+++ b/public/edit-account-page.html
@@ -84,12 +84,9 @@
                         <input type="text" id="user-tag-input" name="user-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก...">
                         <button type="button" class="btn" id="add-tag-btn">+</button>
                     </div>
-
-                    <div class="tag-suggestions" id="tag-suggestions">
-                    </div>
+                    <div class="tag-suggestions" id="tag-suggestions"></div>
                 </div>
-                <ul class="tag-list-item" id="tag-list-display">
-                </ul>
+                <ul class="tag-list-item" id="tag-list-display"></ul>
                 <input type="hidden" name="tags_list" id="tags-list-hidden" value="">
                 <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 3 อัน)</p>
             </div>
