--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -94,7 +94,7 @@
             </div>
             <div class="form-group">
                 <label for="capacity">จำนวนผู้เข้าร่วม :</label>
-                <input class='capacity input' type="number" id="capacity" name="capacity" min="1" max="100" default='1' required>
+                <input class='capacity input' type="number" id="capacity" name="capacity" min="1" max="100" value='10' required>
             </div>
 
             <div class="btn-box">
