Update check-in icon styling and add class for consistent appearance

--- a/public/check-in-room-page.html
+++ b/public/check-in-room-page.html
@@ -87,7 +87,7 @@
                         <div class="creditperson">
                             <span>100</span>
                             <img src=".\Resource\img\credit.png" alt="credit-image">
-                            <span class="material-symbols-outlined not-checked-in-icon">check_circle</span>
+                            <span class="material-symbols-outlined not-checked-in-icon" class="checkin-icon">check_circle</span>
                         </div>
                     </li>
                     <li class="member-room-box">
