--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -89,7 +89,7 @@
                     <div class="tag-suggestions" id="tag-suggestions"></div>
                 </div>
                 <ul class="tag-list-item" id="tag-list-display"></ul>
-                <input type="hidden" name="tags" id="tags-list-hidden" value="">
+                <input type="hidden" name="tags" id="tags-list-hidden" value="" required>
                 <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 5 อัน)</p>
             </div>
             
