--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -33,58 +33,52 @@
 
             <div class="form-group">
                 <div class="add-cover-box">
-                    <img src=".\Resource\img\bangmod.png" alt="background image" class="cover-image-display">
+                    <img src=".\Resource\img\bangmod.png" alt="background image" class="cover-image-display" id="detail-room-img">
                 </div>
             </div>
 
             <div class="form-group">
                 <strong>ไอดี</strong>
-                <span id="room-id">66080658656</span>
+                <span id="detail-room-id">00</span>
             </div>
 
             <div class="form-group">
                 <strong>ชื่อกิจกรรม</strong>
-                <span id="room-name">อ่านแคลกันครับพวกลิง</span>
+                <span id="detail-room-title">อ่านแคลกันครับพวกลิง</span>
             </div>
 
             <div class="form-group">
                 <strong>ชื่อสถานที่</strong>
-                <span id="address-input-display" class="address-activity">N10</span>
+                <span id="detail-room-location" class="address-activity">N10</span>
             </div>
 
             <div class="form-group">
                 <strong>เวลา</strong>
-                <span id="start-time">20:00</span>
-                <span class="inline-separator">-</span>
-                <span id="end-time">21:00</span>
+                <span id="detail-room-time">00:00 - 00:00 น.</span>
             </div>
 
             <div class="form-group">
                 <strong>วัน / เดือน / ปี</strong>
-                <span id="date-input">8 / 11 / 2025</span>
+                <span id="detail-room-date">0 / 00 / 0000</span>
             </div>
 
             <div class="form-group">
                 <strong>รายละเอียด</strong>
-                <textarea title="รายละเอียดกิจกรรม" readonly id="room-detail" name="room-detail"
+                <textarea title="รายละเอียดกิจกรรม" readonly id="detail-room-desc" name="room-detail"
                     class="detail-textarea">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, quia. Labore aliquid provident ut eaque commodi minus, quaerat sequi fuga sapiente magnam ex possimus quod error totam saepe et vitae accusamus non laboriosam obcaecati perspiciatis est? Accusantium fuga blanditiis eveniet provident quidem? Quod, at! Aspernatur iusto enim voluptatibus assumenda accusantium!</textarea>
             </div>
 
             <div class="form-group">
                 <strong>Tag :</strong>
-                <ul class="tag-list-item">
-                    <li>อ่านหนังสือ</li>
-                    <li>calculus</li>
-                </ul>
+                <ul class="tag-list-item" id="detail-room-tags"></ul>
             </div>
 
             <div class="form-group">
                 <strong>ผู้สร้าง : </strong>
-
-                <div class="member-room-box">
+                <div class="member-room-box" id="detail-leader-info">
                     <div class="profile-member">
-                        <img src=".\Resource\img\profile.png" alt="profile-image">
-                        <span>สมศรี ใจดี</span>
+                        <img src=".\Resource\img\profile.png" alt="profile-image" id="detail-leader-img">
+                        <span id="detail-leader-name">Leader</span>
                     </div>
                     <div class="creditperson">
                         <span>100</span>
@@ -94,8 +88,8 @@
             </div>
 
             <div class="form-group">
-                <strong id="room-member-count">ผู้เข้าร่วม ( 2 ) : </strong>
-                <ul class="member-list" id="room-member-list">
+                <strong id="detail-room-member-count">ผู้เข้าร่วม ( 1 / 2 ) : </strong>
+                <ul class="member-list" id="detail-room-member-list">
                     <li class="member-room-box">
                         <div class="profile-member">
                             <img src=".\Resource\img\profile.png" alt="profile-image">
