Add API to fetch room members and update room detail page to display member list

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -89,28 +89,7 @@
 
             <div class="form-group">
                 <strong id="detail-room-member-count">ผู้เข้าร่วม ( 1 / 2 ) : </strong>
-                <ul class="member-list" id="detail-room-member-list">
-                    <li class="member-room-box">
-                        <div class="profile-member">
-                            <img src=".\Resource\img\profile.png" alt="profile-image">
-                            <span>สมศรี ใจดี</span>
-                        </div>
-                        <div class="creditperson">
-                            <span>100</span>
-                            <img src=".\Resource\img\credit.png" alt="credit-image">
-                        </div>
-                    </li>
-                    <li class="member-room-box">
-                        <div class="profile-member">
-                            <img src=".\Resource\img\profile.png" alt="profile-image">
-                            <span>สมศรี ใจดี</span>
-                        </div>
-                        <div class="creditperson">
-                            <span>100</span>
-                            <img src=".\Resource\img\credit.png" alt="credit-image">
-                        </div>
-                    </li>
-                </ul>
+                <ul class="member-list" id="detail-room-member-list"></ul>
             </div>
 
             <div class="btn-box" id="join-box">
