--- a/public/add-room-page.html
+++ b/public/add-room-page.html
@@ -48,7 +48,7 @@
 
             <div class="form-group">
                 <label for="room-name">ชื่อกิจกรรม</label>
-                <input type="text" id="room-name" name="roomTitle" required>
+                <input type="text" id="room-name" name="roomTitle" required maxlength="100">
             </div>
 
             <div class="form-group">
@@ -83,7 +83,7 @@
                 <label for="room-tag">Tag :</label>
                 <div class="tag-input-container">
                     <div class="tag-group">
-                        <input type="text" id="room-tag-input" name="room-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก...">
+                        <input type="text" id="room-tag-input" name="room-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก..." maxlength="50">
                         <button type="button" class="btn" id="add-tag-btn">+</button>
                     </div>
                     <div class="tag-suggestions" id="tag-suggestions"></div>
