--- a/public/edit-room-page.html
+++ b/public/edit-room-page.html
@@ -52,7 +52,7 @@
 
             <div class="form-group">
                 <label for="room-name">ชื่อกิจกรรม</label>
-                <input type="text" id="room-name" name="roomTitle" required value="TitleRoom">
+                <input type="text" id="room-name" name="roomTitle" required value="TitleRoom" maxlength="100">
             </div>
 
             <div class="form-group">
@@ -77,8 +77,7 @@
 
             <div class="form-group">
                 <label for="room-event-date">วัน / เดือน / ปี</label>
-                <input type="date" id="room-event-date" class="date-input" name="roomEventDate" placeholder="วัน" required
-                    value="0000-00-00">
+                <input type="date" id="room-event-date" class="date-input" name="roomEventDate" placeholder="วัน" required>
             </div>
 
             <div class="form-group">
@@ -91,7 +90,7 @@
                 <label for="room-tag">Tag :</label>
                 <div class="tag-input-container">
                     <div class="tag-group">
-                        <input type="text" id="room-tag-input" name="room-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก...">
+                        <input type="text" id="room-tag-input" name="room-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก..." maxlength="50">
                         <button type="button" class="btn" id="add-tag-btn">+</button>
                     </div>
 
