--- a/public/login-page.html
+++ b/public/login-page.html
@@ -26,11 +26,11 @@
         <form method="POST" class="login-form">
             <div class="form-group">
                 <label for="email">อีเมล</label>
-                <input type="email" name="email" id="email" required placeholder="student@kmutt.ac.th">
+                <input type="email" name="email" id="email" required placeholder="student@kmutt.ac.th" maxlength="50">
             </div>
             <div class="form-group">
                 <label for="password">รหัสผ่าน</label>
-                <input type="password" name="password" id="password" required>
+                <input type="password" name="password" id="password" required maxlength="50">
             </div>
 
             <div class="options-group">
