--- a/public/register-page.html
+++ b/public/register-page.html
@@ -26,27 +26,27 @@
         <form action="" method="POST" class="register-form">
             <div class="form-group">
                 <label for="email">อีเมล <span>*</span></label>
-                <input type="email" name="email" id="email" required placeholder="student@kmutt.ac.th">
+                <input type="email" name="email" id="email" required placeholder="student@kmutt.ac.th" maxlength="50">
             </div>
 
             <div class="name-group">
                 <div class="fullnamebox">
                     <label for="fullname">ชื่อ <span>*</span></label>
-                    <input type="text" name="fullname" id="fullname" required>
+                    <input type="text" name="fullname" id="fullname" required maxlength="50">
                 </div>
                 <div class="lastnamebox">
                     <label for="lastname">นามสกุล <span>*</span></label>
-                    <input type="text" name="lastname" id="lastname" required>
+                    <input type="text" name="lastname" id="lastname" required maxlength="50">
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="password">รหัสผ่าน <span>*</span></label>
-                <input type="password" name="password" id="password" required>
+                <input type="password" name="password" id="password" required maxlength="50">
             </div>
             <div class="form-group">
                 <label for="confirm_password">ยืนยันรหัสผ่าน <span>*</span></label>
-                <input type="password" name="confirm_password" id="confirm_password" required>
+                <input type="password" name="confirm_password" id="confirm_password" required maxlength="50">
             </div>
 
             <div class="permission">
